force-app/main/default/objects/Step_Module__c/Step_Module__c.object-meta.xml
<CustomObject>
    <label>Adventure Module</label>
    <nameField>
        <label>Adventure Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adventure Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>