force-app/main/default/objects/Step_Module__c/fields/Adventure_Step__c.field-meta.xml
<CustomField>
    <fullName>Adventure_Step__c</fullName>
    <description>The Adventure Step that contains this Step Module</description>
    <inlineHelpText>The Adventure Step that contains this Step Module</inlineHelpText>
    <label>Adventure Step</label>
    <referenceTo>Adventure_Step__c</referenceTo>
    <relationshipName>Step_Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>