force-app/main/default/objects/Step_Module__c/fields/Completed_Manual__c.field-meta.xml
<CustomField>
    <fullName>Completed_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed (Manual)</label>
    <type>Checkbox</type>
</CustomField>