force-app/main/default/objects/Step_Module__c/fields/Description_Label__c.field-meta.xml
<CustomField>
    <fullName>Description_Label__c</fullName>
    <description>The text to be displayed for this step module&apos;s description link</description>
    <inlineHelpText>The text to be displayed for this step module&apos;s description link</inlineHelpText>
    <label>Description Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>