force-app/main/default/objects/Step_Module__c/fields/Description_URL__c.field-meta.xml
<CustomField>
    <fullName>Description_URL__c</fullName>
    <description>To link to additional content for this Step Module</description>
    <inlineHelpText>This should contain a URL to link to additional content for this Step Module</inlineHelpText>
    <label>Description_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>