force-app/main/default/objects/Step_Module__c/fields/Number_of_Completed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Tasks__c</fullName>
    <label>Number of Completed Tasks</label>
    <summaryFilterItems>
        <field>Module_Task__c.Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Module_Task__c.Step_Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>