force-app/main/default/objects/Step_Module__c/fields/Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks__c</fullName>
    <description>Total number of Module Tasks in this Step Module</description>
    <inlineHelpText>Total number of Module Tasks in this Step Module</inlineHelpText>
    <label>Number of Tasks</label>
    <summaryForeignKey>Module_Task__c.Step_Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>